Nailed down the parallax, got pictures right-sized

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <!-- Container element -->
     <div class="container d-flex align-items-center vh-100" id="container001">
-      <div class="card bg-dark mx-auto opacity-25" style="width: 18rem;">
+      <div class="card bg-light mx-auto opacity-35 text-success" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Consectetur Adipisicing</h5>
           <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus minima reiciendis similique saepe voluptatum expedita inventore officia blanditiis illo tempore nobis quos quasi, quae facilis repudiandae quo hic doloremque dolores!</p>
@@ -22,7 +22,7 @@
       </div>  
     </div>  
     <div class="container d-flex align-items-center vh-100" id="container002">
-      <div class="card bg-dark mx-auto opacity-25" style="width: 18rem;">
+      <div class="card bg-light mx-auto opacity-35 text-success" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Libero Voluptatem</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo ut vel numquam nesciunt? Ullam ad culpa iste libero voluptatem. Culpa temporibus neque consequuntur qui inventore voluptates id, ducimus voluptatibus ea.</p>
@@ -30,7 +30,7 @@
       </div>  
     </div>
     <div class="container d-flex align-items-center vh-100" id="container003">
-      <div class="card bg-dark mx-auto opacity-25" style="width: 18rem;">
+      <div class="card bg-light mx-auto opacity-35 text-success" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Non Eveniet</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate deleniti non quo ea aperiam. Totam nihil, vero non eveniet deserunt at odit voluptatum sequi quae voluptatem, autem impedit ut omnis!</p>
@@ -38,7 +38,7 @@
       </div>  
     </div>  
     <div class="container d-flex align-items-center vh-100" id="container004">
-      <div class="card bg-dark mx-auto opacity-25" style="width: 18rem;">
+      <div class="card bg-light mx-auto opacity-35 text-success" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Dolorem?</h5>
           <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam similique veritatis perferendis, excepturi vitae tempora, voluptate sapiente reprehenderit quasi, vel blanditiis rerum provident modi at debitis tenetur hic facilis. Dolorem?</p>
@@ -46,7 +46,7 @@
       </div>  
     </div>
     <div class="container d-flex align-items-center vh-100" id="container005">
-      <div class="card bg-dark mx-auto opacity-25" style="width: 18rem;">
+      <div class="card bg-light mx-auto opacity-35 text-success" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Temporibus Aspernatur</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nulla totam ullam quas, ab neque dolore explicabo reprehenderit temporibus aspernatur blanditiis odit id reiciendis quaerat mollitia nemo accusantium dolores minima?</p>
